k8s/deployment.app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passivecount-app
  labels:
    app: passivecount
spec:
  replicas: 3
  selector:
    matchLabels:
      app: passivecount
  template:
    metadata:
      labels:
        app: passivecount
    spec:
      containers:
        - name: passivecount
          image: achip/passivecount:1.2.0
          ports:
            - containerPort: 3000
